sandbox/mpi/fp_mpi.pas

function PMPI_Igatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Get_address(location:pointer; address:PMPI_Aint):longint;cdecl;external libhdf5;
function PMPI_Get_count(status:PMPI_Status; datatype:TMPI_Datatype; count:Plongint):longint;cdecl;external libhdf5;
function PMPI_Get_elements(status:PMPI_Status; datatype:TMPI_Datatype; count:Plongint):longint;cdecl;external libhdf5;
function PMPI_Get_elements_x(status:PMPI_Status; datatype:TMPI_Datatype; count:PMPI_Count):longint;cdecl;external libhdf5;
function PMPI_Get(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           target_count:longint; target_datatype:TMPI_Datatype; win:TMPI_Win):longint;cdecl;external libhdf5;
function PMPI_Get_accumulate(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; result_addr:pointer; result_count:longint; 
           result_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; target_count:longint; target_datatype:TMPI_Datatype; 
           op:TMPI_Op; win:TMPI_Win):longint;cdecl;external libhdf5;
function PMPI_Get_library_version(version:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function PMPI_Get_processor_name(name:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function PMPI_Get_version(version:Plongint; subversion:Plongint):longint;cdecl;external libhdf5;
function PMPI_Graph_create(comm_old:TMPI_Comm; nnodes:longint; index:Plongint; edges:Plongint; reorder:longint; 
           comm_graph:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Graph_get(comm:TMPI_Comm; maxindex:longint; maxedges:longint; index:Plongint; edges:Plongint):longint;cdecl;external libhdf5;
function PMPI_Graph_map(comm:TMPI_Comm; nnodes:longint; index:Plongint; edges:Plongint; newrank:Plongint):longint;cdecl;external libhdf5;
function PMPI_Graph_neighbors_count(comm:TMPI_Comm; rank:longint; nneighbors:Plongint):longint;cdecl;external libhdf5;
function PMPI_Graph_neighbors(comm:TMPI_Comm; rank:longint; maxneighbors:longint; neighbors:Plongint):longint;cdecl;external libhdf5;
function PMPI_Graphdims_get(comm:TMPI_Comm; nnodes:Plongint; nedges:Plongint):longint;cdecl;external libhdf5;
function PMPI_Grequest_complete(request:TMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Grequest_start(query_fn:PMPI_Grequest_query_function; free_fn:PMPI_Grequest_free_function; cancel_fn:PMPI_Grequest_cancel_function; extra_state:pointer; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Group_c2f(group:TMPI_Group):TMPI_Fint;cdecl;external libhdf5;
function PMPI_Group_compare(group1:TMPI_Group; group2:TMPI_Group; result:Plongint):longint;cdecl;external libhdf5;
function PMPI_Group_difference(group1:TMPI_Group; group2:TMPI_Group; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Group_excl(group:TMPI_Group; n:longint; ranks:Plongint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Group_f2c(group:TMPI_Fint):TMPI_Group;cdecl;external libhdf5;
function PMPI_Group_free(group:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Group_incl(group:TMPI_Group; n:longint; ranks:Plongint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Group_intersection(group1:TMPI_Group; group2:TMPI_Group; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Group_range_excl(group:TMPI_Group; n:longint; ranges:Parray[0..2] of longint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Group_range_incl(group:TMPI_Group; n:longint; ranges:Parray[0..2] of longint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Group_rank(group:TMPI_Group; rank:Plongint):longint;cdecl;external libhdf5;
function PMPI_Group_size(group:TMPI_Group; size:Plongint):longint;cdecl;external libhdf5;
function PMPI_Group_translate_ranks(group1:TMPI_Group; n:longint; ranks1:Plongint; group2:TMPI_Group; ranks2:Plongint):longint;cdecl;external libhdf5;
function PMPI_Group_union(group1:TMPI_Group; group2:TMPI_Group; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Ibsend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Improbe(source:longint; tag:longint; comm:TMPI_Comm; flag:Plongint; message:PMPI_Message; 
           status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_Imrecv(buf:pointer; count:longint; _type:TMPI_Datatype; message:PMPI_Message; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Info_c2f(info:TMPI_Info):TMPI_Fint;cdecl;external libhdf5;
function PMPI_Info_create(info:PMPI_Info):longint;cdecl;external libhdf5;
function PMPI_Info_delete(info:TMPI_Info; key:Pchar):longint;cdecl;external libhdf5;
function PMPI_Info_dup(info:TMPI_Info; newinfo:PMPI_Info):longint;cdecl;external libhdf5;
function PMPI_Info_f2c(info:TMPI_Fint):TMPI_Info;cdecl;external libhdf5;
function PMPI_Info_free(info:PMPI_Info):longint;cdecl;external libhdf5;
function PMPI_Info_get(info:TMPI_Info; key:Pchar; valuelen:longint; value:Pchar; flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_Info_get_nkeys(info:TMPI_Info; nkeys:Plongint):longint;cdecl;external libhdf5;
function PMPI_Info_get_nthkey(info:TMPI_Info; n:longint; key:Pchar):longint;cdecl;external libhdf5;
function PMPI_Info_get_valuelen(info:TMPI_Info; key:Pchar; valuelen:Plongint; flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_Info_set(info:TMPI_Info; key:Pchar; value:Pchar):longint;cdecl;external libhdf5;
function PMPI_Init(argc:Plongint; argv:PPPchar):longint;cdecl;external libhdf5;
function PMPI_Initialized(flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_Init_thread(argc:Plongint; argv:PPPchar; required:longint; provided:Plongint):longint;cdecl;external libhdf5;
function PMPI_Intercomm_create(local_comm:TMPI_Comm; local_leader:longint; bridge_comm:TMPI_Comm; remote_leader:longint; tag:longint; 
           newintercomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Intercomm_merge(intercomm:TMPI_Comm; high:longint; newintercomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Iprobe(source:longint; tag:longint; comm:TMPI_Comm; flag:Plongint; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_Irecv(buf:pointer; count:longint; datatype:TMPI_Datatype; source:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Irsend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Isend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Issend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Is_thread_main(flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_Lookup_name(service_name:Pchar; info:TMPI_Info; port_name:Pchar):longint;cdecl;external libhdf5;
function PMPI_Message_c2f(message:TMPI_Message):TMPI_Fint;cdecl;external libhdf5;
function PMPI_Message_f2c(message:TMPI_Fint):TMPI_Message;cdecl;external libhdf5;
function PMPI_Mprobe(source:longint; tag:longint; comm:TMPI_Comm; message:PMPI_Message; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_Mrecv(buf:pointer; count:longint; _type:TMPI_Datatype; message:PMPI_Message; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_Neighbor_allgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ineighbor_allgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Neighbor_allgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ineighbor_allgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Neighbor_alltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ineighbor_alltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Neighbor_alltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ineighbor_alltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Neighbor_alltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:PMPI_Aint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:PMPI_Aint; recvtypes:PMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ineighbor_alltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:PMPI_Aint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:PMPI_Aint; recvtypes:PMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Op_c2f(op:TMPI_Op):TMPI_Fint;cdecl;external libhdf5;
function PMPI_Op_commutative(op:TMPI_Op; commute:Plongint):longint;cdecl;external libhdf5;
function PMPI_Op_create(_function:PMPI_User_function; commute:longint; op:PMPI_Op):longint;cdecl;external libhdf5;
function PMPI_Open_port(info:TMPI_Info; port_name:Pchar):longint;cdecl;external libhdf5;
function PMPI_Op_f2c(op:TMPI_Fint):TMPI_Op;cdecl;external libhdf5;
function PMPI_Op_free(op:PMPI_Op):longint;cdecl;external libhdf5;
function PMPI_Pack_external(datarep:Pchar; inbuf:pointer; incount:longint; datatype:TMPI_Datatype; outbuf:pointer; 
           outsize:TMPI_Aint; position:PMPI_Aint):longint;cdecl;external libhdf5;
function PMPI_Pack_external_size(datarep:Pchar; incount:longint; datatype:TMPI_Datatype; size:PMPI_Aint):longint;cdecl;external libhdf5;
function PMPI_Pack(inbuf:pointer; incount:longint; datatype:TMPI_Datatype; outbuf:pointer; outsize:longint; 
           position:Plongint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Pack_size(incount:longint; datatype:TMPI_Datatype; comm:TMPI_Comm; size:Plongint):longint;cdecl;external libhdf5;
function PMPI_Pcontrol(level:longint; args:array of const):longint;cdecl;external libhdf5;
function PMPI_Pcontrol(level:longint):longint;cdecl;external libhdf5;
function PMPI_Probe(source:longint; tag:longint; comm:TMPI_Comm; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_Publish_name(service_name:Pchar; info:TMPI_Info; port_name:Pchar):longint;cdecl;external libhdf5;
